; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_ciphersuites.c_mbedtls_ssl_get_ciphersuite_sig_pk_alg.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_ciphersuites.c_mbedtls_ssl_get_ciphersuite_sig_pk_alg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MBEDTLS_PK_RSA = common dso_local global i32 0, align 4
@MBEDTLS_PK_ECDSA = common dso_local global i32 0, align 4
@MBEDTLS_PK_ECKEY = common dso_local global i32 0, align 4
@MBEDTLS_PK_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ssl_get_ciphersuite_sig_pk_alg(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 129, label %7
    i32 134, label %7
    i32 132, label %7
    i32 128, label %7
    i32 133, label %9
    i32 130, label %11
    i32 131, label %11
  ]

7:                                                ; preds = %1, %1, %1, %1
  %8 = load i32, i32* @MBEDTLS_PK_RSA, align 4
  store i32 %8, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @MBEDTLS_PK_ECDSA, align 4
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1, %1
  %12 = load i32, i32* @MBEDTLS_PK_ECKEY, align 4
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @MBEDTLS_PK_NONE, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %11, %9, %7
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
